# esa-mne-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  setup.sh
.github/workflows/: build-image.yaml
cache/: reports_cache.json  tickers_cache.json
data/discovery/: discovery.csv
data/extraction/: extraction.csv
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
src/: app.py  build_vector_db.py  main.py  main_extraction.py  run_pipeline.py  ss.py  test.py
src/common/: data.py
src/common/websearch/: base.py  duckduckgo.py  google.py
src/config/: __init__.py  langfuse.py
src/discovery/: fetcher.py  models.py  official_register.py  prompts.py  utils.py  wikipedia.py  yahoo.py
src/discovery/official_registers/: country_resolver.py  france.py
src/extraction/: models.py  utils.py  wikipedia.py  yahoo.py
src/extractors/: base.py  models.py  pdf.py  utils.py  wikipedia.py  yahoo.py
src/fetchers/: annual_reports.py  official_register.py  wikipedia.py  yahoo.py
src/fetchers/official_registers/: france.py
src/nace_classifier/: classifier.py
src/vector_db/: loaders.py  notices_nace.py
