[project]
name = "esa-mne-challenge"
version = "0.1.0"
description = "Repository for ESA MNE discovery and extraction challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "duckduckgo-search>=8.0.1",
    "googlesearch-python>=1.3.0",
    "langfuse>=2.60.3",
    "openai>=1.76.2",
    "pandas>=2.2.3",
    "s3fs>=2025.3.2",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.59",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.uv]
default-groups = ["dev"]
